@@ -19,6 +19,7 @@
  */
 #define MPG123_API_VERSION @API_VERSION@
 
+#ifndef MPG123_EXPORT
 /** Defines needed for MS Visual Studio(tm) DLL builds.
  * Every public function must be prefixed with MPG123_EXPORT. When building 
  * the DLL ensure to define BUILD_MPG123_DLL. This makes the function accessible
@@ -36,6 +37,7 @@
 #else
 /* Nothing on normal/UNIX builds */
 #define MPG123_EXPORT
+#endif
 #endif
 #endif
 
@@ -1409,7 +1411,5 @@ MPG123_EXPORT int mpg123_replace_reader_handle( mpg123_handle *mh
 #ifdef __cplusplus
 }
 #endif
-
-#undef MPG123_EXPORT
 
 #endif
